add auth and cron

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,14 @@ DATABASE_URL=""
 SHADOW_DATABASE_URL=""
 
 # DATABASE_URL=postgresql://${PG_USER}:${PG_PASS}@${PG_HOST}:${PG_PORT}/${PG_DB}
+
+# Application
+APP_PORT=3000
+FRONTEND_URL="http://localhost:5173"
+
+# JWT Configuration
+JWT_SECRET="your-secret-key-change-in-production"
+JWT_EXPIRES_IN="24h"
+
+# Work Shift Configuration
+SHIFT_AUTO_CLOSE_HOURS=4
