--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
-    "module": "ESNext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "target": "ES2023",
     "strict": true,
     "esModuleInterop": true,
-    
+
     "declaration": true,
     "removeComments": true,
     "emitDecoratorMetadata": true,
